---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: ????
  Changes:
    - Refactor API usage to use build_from_cursor and support ice-platform
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2025-05-24
  Bugfixes:
    - Fixed undo/redo not working
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2024-11-02
  Bugfixes:
    - Another crash on missing player inventory
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024-11-01
  Features:
    - Place tile ghost to support automatic connector over water, space, lava, etc
  Bugfixes:
    - Crash on missing player inventory
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-10-23
  Features:
    - Recognizes dynamic fluid inputs, such as on Assemblers
  Changes:
    - Support for Factorio 2.0
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2024-09-14
  Features:
    - Support non-pipe ghosts with fluidboxes as connectable neighbors
  Changes:
    - Replace custom vector lookup with util.direction_vectors
    - Add LuaLS annotations to source for all types and functions
    - Improve source comments
    - Improve source naming
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2023-12-09
  Bugfixes:
    - Crash with mods that add underground pipe recipes with fluid ingredients
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2023-12-09
  Bugfixes:
    - Crash with mods that add underground pipe recipes with byproducts